@@ -1444,13 +1444,13 @@ aa_Ef <- read.fasta(file, iseq = 1:2)
 See also <span style="color:blue">`?count.aa`</span>, which can process both protein and nucleic acid sequences.
 ```
 ```{r seq2aa}
-aa_PRIO <- seq2aa("PRIO_HUMAN", "
+aa_PRIO <- seq2aa("
 MANLGCWMLVLFVATWSDLGLCKKRPKPGGWNTGGSRYPGQGSPGGNRYPPQGGGGWGQP
 HGGGWGQPHGGGWGQPHGGGWGQPHGGGWGQGGGTHSQWNKPSKPKTNMKHMAGAAAAGA
 VVGGLGGYMLGSAMSRPIIHFGSDYEDRYYRENMHRYPNQVYYRPMDEYSNQNNFVHDCV
 NITIKQHTVTTTTKGENFTETDVKMMERVVEQMCITQYERESQAYYQRGSSMVLFSSPPV
 ILLISFLIFLIVG
-")
+", "PRIO_HUMAN")
 ```
 <span style="color:green">`uniprot.aa()`</span> returns the amino acid composition of a single amino acid sequence downloaded from UniProt.
 To get sequences for many proteins, use R's `lapply()`, `do.call()`, and `rbind()`:
@@ -1465,7 +1465,7 @@ aa_UniProt <- do.call(rbind, aa)
 ```
 
 ```{r uniprot_aa_offline, echo=FALSE}
-aa_ALAT1 <- seq2aa("ALAT1_HUMAN", "
+aa_ALAT1 <- seq2aa("
 MASSTGDRSQAVRHGLRAKVLTLDGMNPRVRRVEYAVRGPIVQRALELEQELRQGVKKPF
 TEVIRANIGDAQAMGQRPITFLRQVLALCVNPDLLSSPNFPDDAKKRAERILQACGGHSL
 GAYSVSSGIQLIREDVARYIERRDGGIPADPNNVFLSTGASDAIVTVLKLLVAGEGHTRT
@@ -1475,8 +1475,8 @@ AGQQELASFHSTSKGYMGECGFRGGYVEVVNMDAAVQQQMLKLMSVRLCPPVPGQALLDL
 VVSPPAPTDPSFAQFQAEKQAVLAELAAKAKLTEQVFNEAPGISCNPVQGAMYSFPRVQL
 PPRAVERAQELGLAPDMFFCLRLLEETGICVVPGSGFGQREGTYHFRMTILPPLEKLRLL
 LEKLSRFHAKFTLEYS
-")
-aa_CO1A1 <- seq2aa("CO1A1_HUMAN", "
+", "ALAT1_HUMAN")
+aa_CO1A1 <- seq2aa("
 MFSFVDLRLLLLLAATALLTHGQEEGQVEGQDEDIPPITCVQNGLRYHDRDVWKPEPCRI
 CVCDNGKVLCDDVICDETKNCPGAEVPEGECCPVCPDGSESPTDQETTGVEGPKGDTGPR
 GPRGPAGPPGRDGIPGQPGLPGPPGPPGPPGPPGLGGNFAPQLSYGYDEKSTGGISVPGP
@@ -1502,7 +1502,7 @@ DLKMCHSDWKSGEYWIDPNQGCNLDAIKVFCNMETGETCVYPTQPSVAQKNWYISKNPKD
 KRHVWFGESMTDGFQFEYGGQGSDPADVAIQLTFLRLMSTEASQNITYHCKNSVAYMDQQ
 TGNLKKALLLQGSNEIEIRAEGNSRFTYSVTVDGCTSHTGAWGKTVIEYKTTKTSRLPII
 DVAPLDVGAPDQEFGFDVGPVCFL
-")
+", "CO1A1_HUMAN")
 aa_UniProt <- rbind(aa_ALAT1, aa_CO1A1)
 aa_UniProt$abbrv <- c("ALAT1", "CO1A1")
 ```
