@@ -12,7 +12,7 @@
 % links to vignettes 20220723
 \newcommand{\viglink}{\ifelse{html}{\out{<a href="../CHNOSZ/doc/#1.html"><strong>#1.Rmd</strong></a>}}{\bold{#1.Rmd}}}
 
-\section{Changes in CHNOSZ version 1.9.9-43 (2022-10-15)}{
+\section{Changes in CHNOSZ version 1.9.9-45 (2022-11-18)}{
 
   \subsection{MAJOR USER-VISIBLE CHANGES}{
     \itemize{
@@ -194,6 +194,9 @@
 
       \item \code{axis.label()} produces labels with units delimited by
       parentheses instead of a comma.
+
+      \item \code{seq2aa} now has the \strong{sequence} argument first and a
+      default of NA for \strong{protein} (the protein name).
 
     }
   }
